Fixed Alignment Issues, default removed reports link

--- a/web/rainmaker/packages/employee/src/modules/employee/pgr/AllComplaints/index.scss
+++ b/web/rainmaker/packages/employee/src/modules/employee/pgr/AllComplaints/index.scss
@@ -13,6 +13,10 @@
   margin-right: 7px;
 }
 
+.padding-0 {
+  padding: 0 !important;
+}
+
 @media only screen and (max-width: 768px) {
   .csr-action-buttons {
     text-align: center;
